methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: not found: value x
  x=getCouleurSol();
  ^SlugTracking:5: error: not found: value x
  if (x==Color.green){
      ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
    forward();
           ^SlugTracking:7: error: not found: value x
  }else if (x!=Color.green){
            ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
    forward();
           ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
  }else if (x!=Color.green){
        ^