methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  forward();
  x=getCouleurSol();
  if (x==Color.green){
    forward();
  }else if (x!=Color.green){
    backward();
    left();
    forward();
  }
}